# ppcc-ss-gpu

./: CMakeLists.txt  README.md
common/: cuda_helper.cu  cuda_helper.h  kernel_timer.cu  kernel_timer.h  lexical_cast.h
cpp/pi/: CMakeLists.txt  main.cc
cpp/saxpy/: CMakeLists.txt  main.cc
cuda/pi/: CMakeLists.txt  main.cu
cuda/saxpy/: CMakeLists.txt  main.cu
cupy/: cupy_example.ipynb
cupy/dataset/: mnist.py
